--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "AES crypto native module for react-native",
     "main": "index.js",
     "types": "index.d.ts",
-    "author": "tectiv3",
+    "author": "ownfin",
     "license": "MIT",
     "keywords": [
         "react-native",
@@ -23,13 +23,13 @@
         "hmac512",
         "uuid"
     ],
-    "homepage": "https://github.com/tectiv3/react-native-aes",
+    "homepage": "https://github.com/ownfin/react-native-aes",
     "bugs": {
-        "url": "https://github.com/tectiv3/react-native-aes/issues"
+        "url": "https://github.com/ownfin/react-native-aes/issues"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/tectiv3/react-native-aes.git"
+        "url": "git://github.com/ownfin/react-native-aes.git"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
